Bugfix: null contact id was breaking email send. Switches to code for a "no contact" scenario. TO DO: cover both cases well so hopefully the activity documents the email send whether or not a contact id is present on the registration.

--- a/force-app/main/default/classes/SummitEventsRegistration_TEST.cls
+++ b/force-app/main/default/classes/SummitEventsRegistration_TEST.cls
@@ -20,6 +20,8 @@ public class SummitEventsRegistration_TEST {
         email1.Email_Content__c = 'Sample text here';
         email1.Letterhead_HTML__c = 'Letterhead goes here<br/>[[DONT_DELETE_CONTENT_HERE]]';
         email1.BCC_Email__c = 'bcc@example.com';
+        email1.Email_Template__c = '';
+        email1.Org_Email_Id__c = '';
         insert email1;
         Summit_Events_Email__c email2 = new Summit_Events_Email__c();
         email2.Event__c = event.Id;
