--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -10,15 +10,18 @@ public with sharing class SummitEventsConfirmationController {
     public Summit_Events_Instance__c evtInstance { get; set; }
     public String templateSelected { get; set; }
     public String navBreadCrumb { get; set; }
+    public boolean eventIsClosed { get; set; }
+    public Boolean adminOpen { get; set; }
 
     public SummitEventsConfirmationController() {
-
+        eventIsClosed = false;
         evtInfo = SEShared.getSummitEventsInfo();
 
         if (!String.isEmpty(evtInfo.evtId)) {
             eventPage = [
                     SELECT Event_Confirmation_Title__c, Event_Name__c, Template__c, Event_Confirmation_Description__c, Event_Footer__c,
-                            Event_Home_Link_Title__c, Event_Home_Link_URL__c, Tracking_Confirmation_Registration__c,
+                            Event_Home_Link_Title__c, Event_Home_Link_URL__c, Tracking_Confirmation_Registration__c, Event_Full_Text__c,
+                            Close_Event_Days_Before__c, Keep_Registration_Open_During_Event__c,
                             Hand_Raise_Action__c
                     FROM Summit_Events__c
                     WHERE Id = :evtinfo.evtId
@@ -28,12 +31,19 @@ public with sharing class SummitEventsConfirmationController {
             templateSelected = SEShared.getTemplate(eventPage.Template__c);
 
             evtInstance = [
-                    SELECT Instance_Title__c, Event__r.Event_Name__c,
-                            Instance_Time_Zone__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Start_Date__c, Instance_End_Date__c
+                    SELECT Instance_Title__c, Event__r.Event_Name__c, Instance_Time_Zone__c, Instance_Start_Time__c, Instance_End_Time__c,
+                            Instance_Start_Date__c, Instance_End_Date__c, Current_Available_Capacity__c, Active_Status__c
                     FROM Summit_Events_Instance__c
                     WHERE Id = :evtinfo.instanceID
                     LIMIT 1
             ];
+
+            if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
+                adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
+                eventIsClosed = adminOpen;
+            } else {
+                eventIsClosed = SEShared.isEventClosed(eventPage, evtInstance);
+            }
 
             navBreadCrumb = SEShared.navBreadcrumbBuilder(evtInstance, false);
 
